--- a/index.html
+++ b/index.html
@@ -47,19 +47,12 @@ h1 {
 
 </style>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-135514916-1');
-</script>
 
 </head>
 <body>
 <h3> <span id="d">Days</span> <span id="h">Hours</span> <span id="m">Mins</span> <span id="s">Secs</span></h3>
 <h1 id="timer"></h1>
-<p>Din Pachi Bhetaula SanePane ❤️</p>
+<p>月是故乡明</p>
 
 <script>
 // Set the date we're counting down to
