--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ h1 {
 <body>
 <h3> <span id="d">Days</span> <span id="h">Hours</span> <span id="m">Mins</span> <span id="s">Secs</span></h3>
 <h1 id="timer"></h1>
-<p>月是故乡明</p>
+<p>月是故乡明 ❤️</p>
 
 <script>
 // Set the date we're counting down to
