--- a/index.html
+++ b/index.html
@@ -28,7 +28,17 @@ h3 {
   font-size: 25px;
   font-weight: 200;
 }
-
+#d{
+  margin-left: 30px;
+}
+#h{
+  margin-left: 40px;
+}#m{
+  margin-left: 40px;
+}
+#s{
+  margin-left: 40px;
+}
 h1 {
   text-align: center;
   color: #ffffff;
@@ -41,19 +51,16 @@ h1 {
   html { background: red; }
 }
 
-#h {
-  margin-left: 10px;
-}
+
 
 </style>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 
 </head>
 <body>
-<h3> <span id="d">Days</span> <span id="h">Hours</span> <span id="m">Mins</span> <span id="s">Secs</span></h3>
+<h3> <span id="d">天</span> <span id="h">日</span> <span id="m">分</span> <span id="s">秒</span></h3>
 <h1 id="timer"></h1>
-<p>月是故乡明 ❤️</p>
-
+<p>阅是故乡明 ❤️</p>
 <script>
 // Set the date we're counting down to
 var countDownDate = new Date("Jul 13, 2019 05:40:00").getTime();
