--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             font-size: 25px;
             font-weight: 200;
         }
-        
+
         h1 {
             text-align: center;
             color: #ffffff;
@@ -87,7 +87,8 @@
         }
 
         // Output the result in an element with id="demo"
-        document.getElementById("timer").innerHTML = days + ":" + hours + ":" + minutes + ":" + seconds;
+        // document.getElementById("timer").innerHTML = days + ":" + hours + ":" + minutes + ":" + seconds;
+        document.getElementById("timer").innerHTML = 111 + ":" + 11 + ":" + 11 + ":" + 11;
 
         // If the count down is over, write some text
         if (distance < 0) {
