--- a/index.html
+++ b/index.html
@@ -49,29 +49,30 @@
 
 </head>
 <body>
+<h1 id="seconds"></h1>
 <h1 id="timer"></h1>
 <p>❤️ 明倩 🛫 🛬 阅文 ❤️</p>
 <script>
     // Set the date we're counting down to
-    var countDownDate = new Date("Jul 13, 2019 05:40:00").getTime();
+    const countDownDate = new Date("Jul 13, 2019 05:40:00").getTime();
 
     // Update the count down every 1 second
-    var x = setInterval(function () {
+    const x = setInterval(function () {
 
         // Get todays date and time
-        var now = new Date().getTime();
+        const now = new Date().getTime();
 
         // Find the distance between now and the count down date
-        var distance = countDownDate - now;
+        const distance = countDownDate - now;
 
         // Time calculations for days, hours, minutes and seconds
-        var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-        var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-        var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-        var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+        let days = Math.floor(distance / (1000 * 60 * 60 * 24));
+        let hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+        let minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+        let seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
         if (days < 10) {
-            var days = '0' + days;
+            days = '0' + days;
         }
 
         if (hours < 10) {
@@ -79,16 +80,16 @@
         }
 
         if (minutes < 10) {
-            var minutes = '0' + minutes;
+            minutes = '0' + minutes;
         }
 
         if (seconds < 10) {
-            var seconds = '0' + seconds;
+            seconds = '0' + seconds;
         }
 
         // Output the result in an element with id="demo"
-        // document.getElementById("timer").innerHTML = days + ":" + hours + ":" + minutes + ":" + seconds;
-        document.getElementById("timer").innerHTML = 111 + ":" + 11 + ":" + 11 + ":" + 11;
+        document.getElementById("seconds").innerHTML = Math.floor(distance / 1000) + " S";
+        document.getElementById("timer").innerHTML = days + ":" + hours + ":" + minutes + ":" + seconds;
 
         // If the count down is over, write some text
         if (distance < 0) {
