--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
         // If the count down is over, write some text
         if (distance < 0) {
             clearInterval(x);
-            document.getElementById("timer").innerHTML = "FINALLY WE ARE TOGETHER";
+            document.getElementById("seconds").innerHTML = "FINALLY";
+            document.getElementById("timer").innerHTML = "WE ARE TOGETHER";
         }
     }, 1000);
 </script>
