--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 
 </head>
 <body>
+<embed autostart="true" hidden="true" loop="true" name="count_down" src="background.mp3">
+
 <h1 id="seconds"></h1>
 <h1 id="timer"></h1>
 <p>❤️ 明倩 🛫 🛬 阅文 ❤️</p>
